--- a/more.html
+++ b/more.html
@@ -66,7 +66,7 @@
                          tppabs="http://vip.554021.top/index_files/text02.png">
                         </h2>
                     	<a href="http://linshi.dajiehui.com/bocai/cn/" tppabs="">
-                   		 <img src="./日赚800其实很容易_files/jiaru.png" 
+                   		 <img src="img/jiaru.png" 
                     	 tppabs="http://vip.554021.top/index_files/jiaru.png">
                     	</a>
                     	<a href="http://linshi.dajiehui.com/bocai/cn/"></a>
