--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>日赚800很容易</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"> 
     <link rel="icon" href="Dr.jpg" type=image/x-icon>
     <link rel="stylesheet" href="css/more.css">
     	
